src/tparser.c
/*
** @ID: src/tparser.c
** Tokudae Parser
** See Copyright Notice in tokudae.h
*/

#define tparser_c
#define TOKU_CORE

#include "tokudaeprefix.h"

#include <string.h>

#include "tcode.h"
#include "tfunction.h"
#include "tgc.h"
#include "tlexer.h"
#include "tokudaelimits.h"
#include "tmem.h"
#include "tobject.h"
#include "tobject.h"
#include "tparser.h"
#include "tokudaeconf.h"
#include "tstate.h"
#include "tstring.h"
#include "ttable.h"
#include "tvm.h"


/*
** If enabled, it disassembles pre-compiled Tokudae chunk.
** (Used for internal debugging.)
*/
#if defined(TOKUI_DISASSEMBLE_BYTECODE)
#include "ttrace.h"
#define unasmfunc(T,p)      tokuTR_disassemble(T, p)
#else
#define unasmfunc(T,p)      /* no-op */
#endif


/* check if 'tok' matches current token */
#define check(lx,tok)       ((lx)->t.tk == (tok))


/* macros for controlling recursion depth */
#define enterCstack(lx)     tokuT_incCstack((lx)->T)
#define leaveCstack(lx)     ((lx)->T->nCcalls--)


/* macros for 'lastisend' in function state */
#define stmIsReturn(fs)     ((fs)->lastisend == 1)
#define stmIsBreak(fs)      ((fs)->lastisend == 2)
#define stmIsContinue(fs)   ((fs)->lastisend == 3)
#define stmIsEnd(fs)        ((fs)->lastisend)


/* expect 'cond' to be true or invoke error */
#define expect_cond(lx, cond, err) \
    { if (t_unlikely(!(cond))) tokuY_syntaxerror(lx, err); }


/* control flow masks */
#define CFML            (1 << 0) /* regular loop */
#define CFMGL           (1 << 1) /* generic loop */
#define CFMS            (1 << 2) /* switch */
#define CFMASK          (CFML | CFMGL | CFMS)

#define is_loop(s)              (testbits((s)->cf, CFML) != 0)
#define is_genloop(s)           (testbits((s)->cf, CFMGL) != 0)
#define is_switch(s)            (testbits((s)->cf, CFMS) != 0)
#define haspendingjumps(s)      testbits((s)->cf, CFMASK)


/* lexical scope information */
typedef struct Scope {
    struct Scope *prev; /* implicit linked-list */
    int nactlocals; /* number of locals outside of this scope */
    int depth; /* scope depth (number of nested scopes) */
    int firstgoto; /* index of first pending goto jump in this block */
    t_ubyte cf; /* control flow */
    t_ubyte haveupval; /* set if scope contains upvalue variable */
    t_ubyte havetbcvar; /* set if scope contains to-be-closed variable */
} Scope;


/* class declaration state */
typedef struct ClassState {
    struct ClassState *prev; /* chain of nested declarations */
    int pc; /* pc of the NEWCLASS instruction (for private upvalues) */
} ClassState;


/* loop state */
typedef struct LoopState {
    struct LoopState *prev; /* chain */
    Scope s; /* loop scope */
    int pcloop; /* pc where loop starts */
} LoopState;


/* 
** Snapshot of function state.
** (Used primarily for optimizations, e.g., trimming dead code.)
** Does not snapshot or load the 'nk' as it might interfere with
** the 'kcache'.
*/
typedef struct FuncContext {
    int ps_actlocals;
    int ninstpc;
    int prevpc;
    int prevline;
    int sp;
    int nactlocals;
    int np;
    int pc;
    int nabslineinfo;
    int nlocals;
    int nupvals;
    int lasttarget;
    int lastgoto; /* last pending goto in 'gt' */
    t_ubyte ismethod;
    t_ubyte nonilmerge;
    t_ubyte iwthabs;
    t_ubyte needclose;
    t_ubyte callcheck;
    t_ubyte lastisend;
} FuncContext;


static void storecontext(FunctionState *fs, FuncContext *ctx) {
    ctx->ps_actlocals = fs->lx->dyd->actlocals.len;
    ctx->ninstpc = fs->ninstpc;
    ctx->prevpc = fs->prevpc;
    ctx->prevline = fs->prevline;
    ctx->sp = fs->sp;
    ctx->nactlocals = fs->nactlocals;
    ctx->np = fs->np;
    ctx->pc = currPC;
    ctx->nabslineinfo = fs->nabslineinfo;
    ctx->nlocals = fs->nlocals;
    ctx->nupvals = fs->nupvals;
    ctx->lasttarget = fs->lasttarget;
    ctx->lastgoto = fs->lx->dyd->gt.len;
    ctx->ismethod = fs->ismethod;
    ctx->nonilmerge = fs->nonilmerge;
    ctx->iwthabs = fs->iwthabs;
    ctx->needclose = fs->needclose;
    ctx->callcheck = fs->callcheck;
    ctx->lastisend = fs->lastisend;
}


static void loadcontext(FunctionState *fs, FuncContext *ctx) {
    fs->lx->dyd->actlocals.len = ctx->ps_actlocals;
    fs->ninstpc = ctx->ninstpc;
    fs->prevpc = ctx->prevpc;
    fs->prevline = ctx->prevline;
    fs->sp = ctx->sp;
    fs->nactlocals = ctx->nactlocals;
    fs->np = ctx->np;
    currPC = ctx->pc;
    fs->nabslineinfo = ctx->nabslineinfo;
    fs->nlocals = ctx->nlocals;
    fs->nupvals = ctx->nupvals;
    fs->lasttarget = ctx->lasttarget;
    fs->lx->dyd->gt.len = ctx->lastgoto;
    fs->ismethod = ctx->ismethod;
    fs->nonilmerge = ctx->nonilmerge;
    fs->iwthabs = ctx->iwthabs;
    fs->needclose = ctx->needclose;
    fs->callcheck = ctx->callcheck;
    fs->lastisend = ctx->lastisend;
}


/* TODO: use the previous token if the previous token and current
** token are not on the same line. */
/* XXX: also maybe use 'after' instead of 'near' if we are using the
** previous token. */
static t_noret expecterror(Lexer *lx, int tk) {
    const char *err = tokuS_pushfstring(lx->T, "expected %s",
                                                tokuY_tok2str(lx, tk));
    tokuY_syntaxerror(lx, err);
}


static t_noret limiterror(FunctionState *fs, const char *what, int limit) {
    toku_State *T = fs->lx->T;
    int linenum = fs->p->defline;
    const char *where = (linenum == 0 ? "main function" :
                         tokuS_pushfstring(T, "function at line %d", linenum));
    const char *err = tokuS_pushfstring(T, "too many %s (limit is %d) in %s",
                                          what, limit, where);
    tokuY_syntaxerror(fs->lx, err);
}


/* 
** Advance scanner if 'tk' matches the current token,
** otherwise return 0. 
*/
static int match(Lexer *lx, int tk) {
    if (check(lx, tk)) {
        tokuY_scan(lx);
        return 1;
    }
    return 0;
}


/* check if 'tk' matches the current token if not invoke error */
static void expect(Lexer *lx, int tk) {
    if (t_unlikely(!check(lx, tk)))
        expecterror(lx, tk);
}


/* same as 'expect' but this also advances the scanner */
static void expectnext(Lexer *lx, int tk) {
    expect(lx, tk);
    tokuY_scan(lx);
}


/*
** Check that next token is 'what'. 
** Otherwise raise an error that the expected 'what' should 
** match a 'who' in line 'linenum'.
*/
static void expectmatch(Lexer *lx, int what, int who, int linenum) {
    if (t_unlikely(!match(lx, what))) {
        if (lx->line == linenum) /* same line? */
            expecterror(lx, what); /* emit usual error message */
        else /* otherwise spans across multiple lines */
            tokuY_syntaxerror(lx, tokuS_pushfstring(lx->T,
                    "expected %s (to close %s at line %d)",
                    tokuY_tok2str(lx, what), tokuY_tok2str(lx, who), linenum));
    }
}


static const char *errstmname(Lexer *lx, const char *err) {
    const char *stm;
    switch (lx->fs->lastisend) {
        case 1: stm = "return"; break;
        case 2: stm = "break"; break;
        case 3: stm = "continue"; break;
        default: return err;
    }
    return tokuS_pushfstring(lx->T,
            "%s ('%s' must be the last statement in this block)", err, stm);
}


static t_noret expecterrorblk(Lexer *lx) {
    const char *err = tokuS_pushfstring(lx->T,
                        "expected %s", tokuY_tok2str(lx, '}'));
    err = errstmname(lx, err);
    tokuY_syntaxerror(lx, err);
}


/*
** Similar to 'expectmatch' but this is invoked only
** when 'blockstm' expects delimiter '}' which is missing.
*/
static void expectmatchblk(Lexer *lx, int linenum) {
    if (t_unlikely(!match(lx, '}'))) {
        if (lx->line == linenum)
            expecterrorblk(lx);
        else {
            const char *err = tokuS_pushfstring(lx->T,
                    "expected %s to close %s at line %d",
                    tokuY_tok2str(lx, '}'), tokuY_tok2str(lx, '{'), linenum);
            tokuY_syntaxerror(lx, errstmname(lx, err));
        }
    }
}


static OString *str_expectname(Lexer *lx) {
    OString *s;
    expect(lx, TK_NAME);
    s = lx->t.lit.str;
    tokuY_scan(lx);
    return s;
}


/* semantic error; variant of syntax error without 'near <token>' */
t_noret tokuP_semerror(Lexer *lx, const char *err) {
    lx->t.tk = 0;
    tokuY_syntaxerror(lx, err);
}


void tokuP_checklimit(FunctionState *fs, int n, int limit, const char *what) {
    if (t_unlikely(n >= limit))
        limiterror(fs, what, limit);
}


/* get local variable, 'vidx' is compiler index */
static LVar *getlocalvar(FunctionState *fs, int vidx) {
    return &fs->lx->dyd->actlocals.arr[fs->firstlocal + vidx];
}


/* get local variable debug information, 'vidx' is compiler index */
static LVarInfo *getlocalinfo(FunctionState *fs, int vidx) {
    LVar *lv = check_exp(vidx <= fs->nactlocals, getlocalvar(fs, vidx));
    toku_assert(lv->s.pidx >= 0 && lv->s.pidx < fs->nlocals);
    return &fs->p->locals[lv->s.pidx];
}


/*
** Convert 'nvar', a compiler index level, to its corresponding
** stack level.
*/
static int stacklevel(FunctionState *fs, int nvar) {
    if (nvar-- > 0) /* have at least one variable? */
        return getlocalvar(fs, nvar)->s.sidx + 1;
    return 0; /* no variables on stack */
}


/*
** Return number of variables on the stack for the given
** function.
*/
static int nvarstack(FunctionState *fs) {
    return stacklevel(fs, fs->nactlocals);
}


static void contadjust(FunctionState *fs, int push) {
    int ncntl = is_genloop(&fs->ls->s) * VAR_N;
    int total = (fs->nactlocals - fs->ls->s.nactlocals - ncntl);
    tokuC_adjuststack(fs, push ? -total : total);
}


/*
** Adds a new 'break' jump into the goto list.
*/
static int newbreakjump(Lexer *lx, int pc, int bk, int close) {
    GotoList *gl = &lx->dyd->gt;
    int n = gl->len;
    tokuM_growarray(lx->T, gl->arr, gl->size, n, INT_MAX, "pending jumps", Goto);
    gl->arr[n].pc = pc;
    gl->arr[n].nactlocals = lx->fs->nactlocals;
    gl->arr[n].close = cast_ubyte(close);
    gl->arr[n].bk = cast_ubyte(bk);
    gl->len = n + 1;
    return n;
}


/* 
** Get the most recent control flow scope, or NULL if none
** present.
*/
static const Scope *getcfscope(const FunctionState *fs) {
    const Scope *s = NULL;
    if (fs->switchscope)
        s = fs->switchscope;
    if (fs->ls && (!s || s->depth < fs->ls->s.depth))
        s = &fs->ls->s;
    toku_assert(!s || haspendingjumps(s));
    return s;
}


/*
** Add new pending (break or continue in generic loop) jump to the goto list.
** This language construct is coded as POP followed by a JMP.
** If close is needed, sequence of instructions is CLOSE->POP->JMP.
** If the pending jump is continue inside of generic loop then only JMP
** is emitted as the popping and close is managed by 'continuestm'.
*/
static int newpendingjump(Lexer *lx, int bk, int close, int adjust) {
    FunctionState *fs = lx->fs;
    int pc;
    toku_assert(getopSize(OP_JMP) == getopSize(OP_POP));
    toku_assert(getopSize(OP_JMP) == getopSize(OP_CLOSE));
    if (close) { /* needs close? */
        const Scope *cfs = getcfscope(fs);
        toku_assert(cfs != NULL);
        tokuC_emitIL(fs, OP_CLOSE, stacklevel(fs, cfs->nactlocals));
    }
    if (bk) { /* break statement? */
        toku_assert(adjust >= 0);
        tokuC_adjuststack(fs, adjust);
    }
    pc = tokuC_jmp(fs, OP_JMP);
    return newbreakjump(lx, pc, bk, close);
}


/* 
** Remove local variables up to specified level.
*/
static void removelocals(FunctionState *fs, int tolevel) {
    fs->lx->dyd->actlocals.len -= fs->nactlocals - tolevel;
    toku_assert(fs->lx->dyd->actlocals.len >= 0);
    while (fs->nactlocals > tolevel) /* set debug information */
        getlocalinfo(fs, --fs->nactlocals)->endpc = currPC;
}


/*
** Patch pending goto jumps ('break' or 'continue' in generic loop).
*/
static void patchpendingjumps(FunctionState *fs, Scope *s) {
    Lexer *lx = fs->lx;
    GotoList *gl = &lx->dyd->gt;
    int igt = s->firstgoto; /* first goto in the finishing block */
    toku_assert(haspendingjumps(s));
    while (igt < gl->len) {
        Goto *gt = &gl->arr[igt];
        if (gt->bk) /* 'break' ? */
            tokuC_patchtohere(fs, gt->pc);
        else { /* 'continue' in generic loop */
            toku_assert(fs->ls && fs->ls->pcloop != NOPC);
            toku_assert(s == &fs->ls->s && is_genloop(s));
            toku_assert(!gt->close);
            tokuC_patch(fs, gt->pc, fs->ls->pcloop);
        }
        igt++; /* get next */
    }
    lx->dyd->gt.len = s->firstgoto; /* remove pending goto jumps */
}


/* init expression with generic information */
static void initexp(ExpInfo *e, expt et, int info) {
    e->t = e->f = NOJMP;
    e->et = et;
    e->u.info = info;
}


#define voidexp(e)      initexp(e, EXP_VOID, 0)


/* 'voidexp' but in C99 initializer syntax */
#define INIT_EXP        { .et = EXP_VOID, .t = NOJMP, .f = NOJMP }


static void initvar(FunctionState *fs, ExpInfo *e, int vidx) {
    e->t = e->f = NOJMP;
    e->et = EXP_LOCAL;
    e->u.var.vidx = vidx;
    e->u.var.sidx = getlocalvar(fs, vidx)->s.sidx;
}


static void initstring(ExpInfo *e, OString *s) {
    e->f = e->t = NOJMP;
    e->et = EXP_STRING;
    e->u.str = s;
}


/* add local debug information into 'locals' */
static int registerlocal(Lexer *lx, FunctionState *fs, OString *name) {
    Proto *p = fs->p;
    int osz = p->sizelocals;
    tokuM_growarray(lx->T, p->locals, p->sizelocals, fs->nlocals, MAXVARS,
                    "locals", LVarInfo);
    while (osz < p->sizelocals)
        p->locals[osz++].name = NULL;
    p->locals[fs->nlocals].name = name;
    p->locals[fs->nlocals].startpc = currPC;
    tokuG_objbarrier(lx->T, p, name);
    return fs->nlocals++;
}


/*
** Adjust locals by increment 'nvars' and register them
** inside 'locals'.
*/
static void adjustlocals(Lexer *lx, int nvars) {
    FunctionState *fs = lx->fs;
    int stacklevel = nvarstack(fs);
    for (int i = 0; i < nvars; nvars--) {
        int vidx = fs->nactlocals++;
        LVar *lvar = getlocalvar(fs, vidx);
        lvar->s.sidx = stacklevel++;
        lvar->s.pidx = registerlocal(lx, fs, lvar->s.name);
    }
}


static void enterscope(FunctionState *fs, Scope *s, int cf) {
    s->cf = cast_ubyte(cf);
    if (fs->scope) { /* not a global scope? */
        s->depth = fs->scope->depth + 1;
        s->havetbcvar = fs->scope->havetbcvar;
    } else { /* global scope */
        s->depth = 0;
        s->havetbcvar = 0;
    }
    s->nactlocals = fs->nactlocals;
    s->firstgoto = fs->lx->dyd->gt.len;
    s->haveupval = 0;
    s->prev = fs->scope;
    fs->scope = s;
}


static void leavescope(FunctionState *fs) {
    Scope *s = fs->scope;
    int stklevel = stacklevel(fs, s->nactlocals);
    int nvalues = fs->nactlocals - s->nactlocals;
    if (s->prev && s->haveupval) /* need a 'close'? */
        tokuC_emitIL(fs, OP_CLOSE, stklevel);
    removelocals(fs, s->nactlocals); /* remove scope locals */
    toku_assert(s->nactlocals == fs->nactlocals);
    if (s->prev) /* not main chunk scope? */
        tokuC_pop(fs, nvalues); /* pop locals */
    if (haspendingjumps(s)) /* might have pending jumps? */
        patchpendingjumps(fs, s); /* patch them */
    fs->scope = s->prev; /* go back to the previous scope (if any) */
}


/* 
** Mark scope where variable at compiler index 'level' was defined
** in order to emit close instruction before the scope gets closed.
*/
static void scopemarkupval(FunctionState *fs, int level) {
    Scope *s = fs->scope;
    while (s->nactlocals > level)
        s = s->prev;
    s->haveupval = 1;
    fs->needclose = 1;
}


/* 
** Mark current scope as scope that has a to-be-closed
** variable.
*/
static void scopemarkclose(FunctionState *fs) {
    Scope *s = fs->scope;
    s->haveupval = 1;
    s->havetbcvar = 1;
    fs->needclose = 1;
}


static void open_func(Lexer *lx, FunctionState *fs, Scope *s) {
    toku_State *T = lx->T;
    Proto *p = fs->p;
    toku_assert(p != NULL);
    fs->prev = lx->fs;
    fs->lx = lx;
    lx->fs = fs;
    fs->prevline = p->defline;
    fs->firstlocal = lx->dyd->actlocals.len;
    p->source = lx->src;
    tokuG_objbarrier(T, p, p->source);
    p->maxstack = 2; /* stack slots 0/1 are always valid */
    fs->kcache = tokuH_new(T); /* create table for function */
    settval2s(T, T->sp.p, fs->kcache); /* anchor it */
    tokuT_incsp(T);
    enterscope(fs, s, 0); /* start top-level scope */
}


static void close_func(Lexer *lx) {
    FunctionState *fs = lx->fs;
    toku_State *T = lx->T;
    Proto *p = fs->p;
    toku_assert(fs->scope && !fs->scope->prev); /* this is the last scope */
    leavescope(fs); /* end final scope */
    if (!stmIsReturn(fs)) /* function missing final return? */
        tokuC_return(fs, nvarstack(fs), 0); /* add implicit return */
    tokuC_finish(fs); /* final code adjustments */
    /* shrink unused memory */
    tokuM_shrinkarray(T, p->p, p->sizep, fs->np, Proto *);
    tokuM_shrinkarray(T, p->k, p->sizek, fs->nk, TValue);
    tokuM_shrinkarray(T, p->code, p->sizecode, currPC, Instruction);
    tokuM_shrinkarray(T, p->lineinfo, p->sizelineinfo, currPC, t_byte);
    tokuM_shrinkarray(T, p->abslineinfo, p->sizeabslineinfo, fs->nabslineinfo,
                         AbsLineInfo);
    tokuM_shrinkarray(T, p->instpc, p->sizeinstpc, fs->ninstpc, int);
    tokuM_shrinkarray(T, p->locals, p->sizelocals, fs->nlocals, LVarInfo);
    tokuM_shrinkarray(T, p->upvals, p->sizeupvals, fs->nupvals, UpValInfo);
    lx->fs = fs->prev; /* go back to enclosing function (if any) */
    T->sp.p--; /* pop kcache table */
    tokuG_checkGC(T); /* try to collect garbage memory */
    unasmfunc(T, fs->p);
}


/* add function prototype */
static Proto *addproto(Lexer *lx) {
    toku_State *T = lx->T;
    FunctionState *fs = lx->fs;
    Proto *p = fs->p;
    Proto *clp; /* closure prototype */
    if (fs->np >= p->sizep) {
        int osz = p->sizep;
        tokuM_growarray(T, p->p, p->sizep, fs->np, MAX_ARG_L, "functions",
                      Proto *);
        while (osz < p->sizep)
            p->p[osz++] = NULL;
    }
    p->p[fs->np++] = clp = tokuF_newproto(T);
    tokuG_objbarrier(T, p, clp);
    return clp;
}


/* set current function as vararg */
static void setvararg(FunctionState *fs, int arity) {
    fs->p->isvararg = 1;
    tokuC_emitIL(fs, OP_VARARGPREP, arity);
}


/* forward declare (can be both part of statement and expression) */
static void funcbody(Lexer *lx, ExpInfo *v, int linenum, int ismethod, int del);
static void localstm(Lexer *lx);


/* forward declare recursive non-terminals */
static void decl(Lexer *lx);
static void stm(Lexer *lx);
static void expr(Lexer *lx, ExpInfo *e);


/* adds local variable to the 'actlocals' */
static int addlocal(Lexer *lx, OString *name, int linenum) {
    FunctionState *fs = lx->fs;
    DynData *dyd = lx->dyd;
    LVar *local;
    tokuP_checklimit(fs, dyd->actlocals.len + 1 - fs->firstlocal, MAXVARS,
                         "locals");
    tokuM_growarray(lx->T, dyd->actlocals.arr, dyd->actlocals.size,
                           dyd->actlocals.len, INT_MAX, "locals", LVar);
    local = &dyd->actlocals.arr[dyd->actlocals.len++];
    local->s.kind = VARREG;
    local->s.pidx = -1; /* mark uninitialized */
    local->s.linenum = linenum;
    local->s.name = name;
    return dyd->actlocals.len - fs->firstlocal - 1;
}


#define addlocallitln(lx,lit,line) \
        addlocal(lx, tokuY_newstring(lx, "" lit, LL(lit)), line)

#define addlocallit(lx,lit)     addlocallitln(lx, lit, lx->line)


/*
** Searches for local variable 'name'.
*/
static int searchlocal(FunctionState *fs, OString *name, ExpInfo *v, int lim) {
    for (int i = fs->nactlocals - 1; 0 <= i && lim < i; i--) {
        LVar *lvar = getlocalvar(fs, i);
        if (eqstr(name, lvar->s.name)) { /* found? */
            initvar(fs, v, i);
            return EXP_LOCAL;
        }
    }
    return -1; /* not found */
}


/* allocate space for new 'UpValInfo' */
static UpValInfo *newupvalue(FunctionState *fs) {
    Proto *p = fs->p;
    int osz = p->sizeupvals;
    tokuP_checklimit(fs, fs->nupvals + 1, MAXUPVAL, "upvalues");
    tokuM_growarray(fs->lx->T, p->upvals, p->sizeupvals, fs->nupvals,
                    MAXUPVAL, "upvalues", UpValInfo);
    while (osz < p->sizeupvals)
        p->upvals[osz++].name = NULL;
    return &p->upvals[fs->nupvals++];
}


/* add new upvalue 'name' into 'upvalues' */
static int addupvalue(FunctionState *fs, OString *name, ExpInfo *v) {
    UpValInfo *uv = newupvalue(fs);
    FunctionState *prev = fs->prev;
    if (v->et == EXP_LOCAL) { /* local? */
        uv->onstack = 1;
        uv->idx = v->u.var.sidx;
        uv->kind = getlocalvar(prev, v->u.var.vidx)->s.kind;
        toku_assert(eqstr(name, getlocalvar(prev, v->u.var.vidx)->s.name));
    } else { /* must be upvalue */
        toku_assert(v->et == EXP_UVAL);
        uv->onstack = 0;
        uv->idx = cast_ubyte(v->u.info);
        uv->kind = prev->p->upvals[v->u.info].kind;
        toku_assert(eqstr(name, prev->p->upvals[v->u.info].name));
    }
    uv->name = name;
    tokuG_objbarrier(fs->lx->T, fs->p, name);
    return fs->nupvals - 1;
}


/* searches for upvalue 'name' */
static int searchupvalue(FunctionState *fs, UpValInfo *up, OString *name) {
    for (int i = 0; i < fs->nupvals; i++)
        if (eqstr(up[i].name, name)) 
            return i;
    return -1; /* not found */
}


/*
** Find a variable with the given name. If it is upvalue add this upvalue
** into all intermediate functions. If it is not found, set 'var' as EXP_VOID.
*/
static void varaux(FunctionState *fs, OString *name, ExpInfo *var, int base) {
    if (fs == NULL) /* last scope? */
        voidexp(var); /* not found */
    else { /* otherwise search locals/upvalues */
        if (searchlocal(fs, name, var, -1) == EXP_LOCAL) { /* local found? */
            if (!base) /* in recursive call to 'varaux'? */
                scopemarkupval(fs, var->u.var.vidx); /* use local as upvalue */
        } else { /* not found as local at current level; try upvalues */
            int idx = searchupvalue(fs, fs->p->upvals, name);
            if (idx < 0) { /* upvalue not found? */
                varaux(fs->prev, name, var, 0); /* try upper levels */
                if (var->et == EXP_LOCAL || var->et == EXP_UVAL) /* found? */
                    idx = addupvalue(fs, name, var); /* add new upvalue */
                else /* it is global */
                    return; /* done */
            }
            initexp(var, EXP_UVAL, idx); /* new or old upvalue */
        }
    }
}


static void expname(Lexer *lx, ExpInfo *e) {
    initstring(e, str_expectname(lx));
}


/* find variable 'name' */
static void var(Lexer *lx, OString *varname, ExpInfo *var) {
    FunctionState *fs= lx->fs;
    varaux(lx->fs, varname, var, 1);
    if (var->et == EXP_VOID) {
        ExpInfo key;
        varaux(fs, lx->envn, var, 1); /* get environment variable */
        toku_assert(var->et != EXP_VOID); /* this one must exist */
        tokuC_exp2stack(fs, var); /* put env on stack */
        initstring(&key, varname); /* key is variable name */
        tokuC_indexed(fs, var, &key, 0); /* env[varname] */
    }
}


#define varlit(lx,l,e)      var(lx, tokuY_newstring(lx, "" l, LL(l)), e)


/* =======================================================================
**                              EXPRESSIONS
** ======================================================================= */

static int explist(Lexer *lx, ExpInfo *e) {
    int n = 1;
    expr(lx, e);
    while (match(lx, ',')) {
        tokuC_exp2stack(lx->fs, e);
        expr(lx, e);
        n++;
    }
    return n;
}


static void indexed(Lexer *lx, ExpInfo *var, int super) {
    ExpInfo key = INIT_EXP;
    tokuY_scan(lx); /* skip '[' */
    tokuC_exp2stack(lx->fs, var);
    expr(lx, &key);
    tokuC_indexed(lx->fs, var, &key, super);
    expectnext(lx, ']');
}


static void getdotted(Lexer *lx, ExpInfo *v, int super) {
    ExpInfo key = INIT_EXP;
    tokuY_scan(lx); /* skip '.' */
    tokuC_exp2stack(lx->fs, v);
    expname(lx, &key);
    tokuC_getdotted(lx->fs, v, &key, super);
}


static void superkw(Lexer *lx, ExpInfo *e) {
    FunctionState *fs = lx->fs;
    if (t_unlikely(!fs->cs))
        tokuP_semerror(lx, "'super' usage outside of a class definition");
    else if (t_unlikely(!fs->ismethod))
        tokuP_semerror(lx, "'super' usage outside of a class (meta)method");
    tokuY_scan(lx); /* skip 'super' */
    varlit(lx, "self", e); /* get instance */
    toku_assert(e->et == EXP_LOCAL); /* (must be a local variable) */
    tokuC_exp2stack(fs, e); /* put instance on stack */
    if (check(lx, '[')) /* index access? */
        indexed(lx, e, 1);
    else if (check(lx, '.')) /* field access? */
        getdotted(lx, e, 1);
    else { /* get superclass */
        tokuC_emitI(fs, OP_SUPER);
        e->et = EXP_SUPER;
    }
}


static void primaryexp(Lexer *lx, ExpInfo *e) {
    switch (lx->t.tk) {
        case '(': {
            int linenum = lx->line;
            tokuY_scan(lx); /* skip '(' */
            expr(lx, e);
            expectmatch(lx, ')', '(', linenum);
            tokuC_exp2val(lx->fs, e);
            break;
        }
        case TK_NAME:
            var(lx, str_expectname(lx), e);
            break;
        case TK_SUPER:
            superkw(lx, e);
            break;
        default: tokuY_syntaxerror(lx, "unexpected symbol");
    }
}


static void call(Lexer *lx, ExpInfo *e) {
    FunctionState *fs = lx->fs;
    int linenum = lx->line;
    int base = fs->sp - 1;
    tokuY_scan(lx); /* skip '(' */
    if (!check(lx, ')')) { /* have arguments? */
        explist(lx, e);
        if (eismulret(e)) /* last argument is a call or vararg? */
            tokuC_setmulret(fs, e); /* it returns all values (finalize it) */
        else /* otherwise... */
            tokuC_exp2stack(fs, e); /* put last argument value on stack */
    } else /* otherwise no arguments */
        e->et = EXP_VOID;
    expectnext(lx, ')');
    initexp(e, EXP_CALL, tokuC_call(fs, base, TOKU_MULTRET));
    tokuC_fixline(fs, linenum);
    linenum = lx->line;
    if (match(lx, '?')) /* call check? */
        tokuC_callcheck(fs, base, linenum);
}


static void suffixedexp(Lexer *lx, ExpInfo *e) {
    primaryexp(lx, e);
    for (;;) {
        switch (lx->t.tk) {
            case '.':
                getdotted(lx, e, 0);
                break;
            case '[':
                indexed(lx, e, 0);
                break;
            case '(':
                tokuC_exp2stack(lx->fs, e);
                call(lx, e);
                break;
            default: return;
        }
    }
}


/* {====================================================================
** List constructor
** ===================================================================== */

typedef struct LConstructor {
    ExpInfo *l; /* list descriptor */
    ExpInfo v; /* last list item descriptor */
    int narray; /* number of list elements already stored */
    int tostore; /* number of list elements pending to be stored */
} LConstructor;


static void listfield(Lexer *lx, LConstructor *c) {
    expr(lx, &c->v);
    c->tostore++;
}


static void checklistlimit(FunctionState *fs, LConstructor *c) {
    int size;
    if (c->narray <= INT_MAX - c->tostore)
       size = c->narray + c->tostore;
    else /* otherwise overflow */
        size = INT_MAX; /* force error */
    tokuP_checklimit(fs, size, INT_MAX, "elements in a list constructor");
}


static void closelistfield(FunctionState *fs, LConstructor *c) {
    if (c->v.et == EXP_VOID) return; /* there is no list item */
    tokuC_exp2stack(fs, &c->v); /* put the item on stack */
    voidexp(&c->v); /* now empty */
    if (c->tostore == LISTFIELDS_PER_FLUSH) { /* flush? */
        checklistlimit(fs, c);
        tokuC_setlist(fs, c->l->u.info, c->narray, c->tostore);
        c->narray += c->tostore; /* add to total */
        c->tostore = 0; /* no more pending items */
    }
}

